--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <div class="inner">
 
                     <div class="avatar">
-                        <span class="span"><a href="https://github.com/pluzman">   <img class="avatar_view" src="https://avatars.githubusercontent.com/u/143189744?v=4">
+                        <span class="span"><a href="https://github.com/pluzman">   <img class="avatar_view" src="https://yt3.googleusercontent.com/ytc/AIdro_lvMWGqKv5ZDHCg0_1Y8jH6pg350OWkGuSx0gs38H4UiA=s160-c-k-c0x00ffffff-no-rj">
 
                     </div>
-                                         <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">PLUZMAN</p>
+                                         <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">NEGRONN</p>
 
                     <div id="logos" class="logos">
                         <span class="span"><a href="https://t.me/pluzmna">                                          <img class="item" src="images/telegram.png"></a></span>
