--- a/index.html
+++ b/index.html
@@ -24,19 +24,12 @@
                                          <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">NEGRONN</p>
 
                     <div id="logos" class="logos">
-                        <span class="span"><a href="https://t.me/pluzmna">                                          <img class="item" src="images/telegram.png"></a></span>
-                        <span class="span"><a href="https://m.me/pluzmna">                                          <img class="item" src="images/Messenger.png"></a></span>
-                        <span class="span"><a href="https://www.instagram.com/pluzmna/n">                           <img class="item" src="images/Instagram.png"></a></span>
-                        <span class="span"><a href="https://www.facebook.com/pluzmna/">                             <img class="item" src="images/Facebook.png"></a></span>
-                        <span class="span"><a href="https://www.linkedin.com/in/pluz-man-1a20942b4///">             <img class="item" src="images/Linkedin.png"></a></span>
-                        <span class="span"><a href="https://www.youtube.com/@plusjell6172">                         <img class="item" src="images/youtube.png"></a></span>
-                        <span class="span"><a href="https://www.tiktok.com/@user885444965//">                       <img class="item" src="images/TikTok.png"></a></span>
-                        <span class="span"><a href="https://soundcloud.com/pluz-man">                               <img class="item" src="images/Soundcloud.png"></a></span>
-                        <span class="span"><a href="https://www.deviantart.com/pluzman">                            <img class="item" src="images/DeviantArt.png"></a></span>
-                        <span class="span"><a href="https://tr.pinterest.com/dgiymat///">                           <img class="item" src="images/Pinterest.png"></a></span>
+                        <span class="span"><a href="https://www.youtube.com/@negronnshow5822/">                         <img class="item" src="images/youtube.png"></a></span>
+                        <span class="span"><a href="https://web.ggather.com/negronnshow/hesaplar2">                         <img class="item" src="images/gg.png"></a></span>
                         <span class="span"><a href="https://discordapp.com/users/1057349417293844560">              <img class="item" src="images/discord.png"></a></span>
-                        <span class="span"><a href="https://xdaforums.com/m/google-sasi.11870669//">                <img class="item" src="images/xda.png"></a></span>
-                        <span class="span"><a href="mailto:dgiymat@gmail.com">                                      <img class="item" src="images/Mail.png"></a></span>
+                        <span class="span"><a href="https://www.youtube.com/@ns1turkiye381">                         <img class="item" src="images/youtube.png"></a></span>
+                        <span class="span"><a href="https://xdaforums.com/m/negron-show.8946969/">                <img class="item" src="images/xda.png"></a></span>
+                        <span class="span"><a href="mailto:negronnshow@gmail.com">                                      <img class="item" src="images/Mail.png"></a></span>
 
 
                     </div>
