--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="inner">
 
                     <div class="avatar">
-                        <span class="span"><a href="https://github.com/aleyyulala>   <img class="avatar_view" src="https://yt3.googleusercontent.com/ytc/AIdro_lvMWGqKv5ZDHCg0_1Y8jH6pg350OWkGuSx0gs38H4UiA=s160-c-k-c0x00ffffff-no-rj">
+                        <span class="span"><a href="https://github.com/aleyyulala>   <img class="avatar_view" src="https://lh3.googleusercontent.com/a/ACg8ocLcFVsr5sio_MkMvRV7WMalyZekmjbRhg7QAAfuu19iSJXwTq4=s288-c-no">
 
                     </div>
                                          <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">NEGRONN</p>
