--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="inner">
 
                     <div class="avatar">
-                        <span class="span"><a href="https://github.com/aleyyulala>   <img class="avatar_view" src="https://lh3.googleusercontent.com/a/ACg8ocLcFVsr5sio_MkMvRV7WMalyZekmjbRhg7QAAfuu19iSJXwTq4=s288-c-no">
+                        <span class="span"><a href="https://github.com/aleyyulala>    <img class="item" src="images/youtube.png"></a></span>
 
                     </div>
                                          <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">NEGRONN</p>
