--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="inner">
 
                     <div class="avatar">
-                        <span class="span"><a href="https://github.com/aleyyulala">                                   <img class="item" src="images/avatar.png"></a></span>
+                        <span class="span"><a href="https://github.com/aleyyulala">                                   <img class="avatar_view" src="images/avatar.png"></a></span>
 
                     </div>
                                          <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">NEGRONN</p>
