--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <div class="avatar">
                                       </div>
-                                      <p align="middle" style="font-size: 15px; font-family: Arial; margin: 30px;">MOBILE <a href="https://github.com/ilhan-athn7/" style="color: gray;">OS</a></p>
+                                      <p align="middle" style="font-size: 15px; font-family: Arial; margin: 30px;">MOBILE <a href="https://github.com/ilhan-athn7/" style="color: white;">OS</a></p>
 
                 </div>
             </div>
