--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                         <span class="span"><a href="https://steamcommunity.com/chat/invite/QuFgrbKA">                         <img class="item" src="images/steam.png"></a></span>
                         <span class="span"><a href="https://www.youtube.com/@negronnshow5822/">                         <img class="item" src="images/youtube.png"></a></span>
                         <span class="span"><a href="https://web.ggather.com/negronnshow/hesaplar2">                         <img class="item" src="images/gg.png"></a></span>
-                        <span class="span"><a href="https://discordapp.com/users/1057349417293844560">              <img class="item" src="images/discord.png"></a></span>
+                        <span class="span"><a href="https://discordapp.com/users/1227559903292555357">              <img class="item" src="images/discord.png"></a></span>
                         <span class="span"><a href="https://www.youtube.com/@ns1turkiye381">                         <img class="item" src="images/youtube.png"></a></span>
+                        <span class="span"><a href="https://www.guilded.gg/profile/nm6j5xzm">              <img class="item" src="images/guilded.png"></a></span>
                         <span class="span"><a href="https://xdaforums.com/m/negron-show.8946969/">                <img class="item" src="images/xda.png"></a></span>
                         <span class="span"><a href="mailto:negronnshow@gmail.com">                                      <img class="item" src="images/Mail.png"></a></span>
 
