--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                                          <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">NEGRONN</p>
 
                     <div id="logos" class="logos">
+                        <span class="span"><a href="https://www.twitch.tv/negronnshow/">                                  <img class="item" src="images/twitch.png"></a></span>
                         <span class="span"><a href="https://steamcommunity.com/chat/invite/QuFgrbKA">                         <img class="item" src="images/steam.png"></a></span>
                         <span class="span"><a href="https://www.youtube.com/@negronnshow5822/">                         <img class="item" src="images/youtube.png"></a></span>
                         <span class="span"><a href="https://web.ggather.com/negronnshow/hesaplar2">                         <img class="item" src="images/gg.png"></a></span>
