--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <div id="logos" class="logos">
                         <span class="span"><a href="https://www.twitch.tv/negronnshow/">                                  <img class="item" src="images/twitch.png"></a></span>
                         <span class="span"><a href="https://steamcommunity.com/chat/invite/QuFgrbKA">                         <img class="item" src="images/steam.png"></a></span>
+                        <span class="span"><a href="https://www.gog.com/u/NEGRONN">                                 <img class="item" src="images/gog.png"></a></span>
                         <span class="span"><a href="https://www.youtube.com/@negronnshow5822/">                         <img class="item" src="images/youtube.png"></a></span>
                         <span class="span"><a href="https://web.ggather.com/negronnshow/hesaplar2">                         <img class="item" src="images/gg.png"></a></span>
                         <span class="span"><a href="https://discordapp.com/users/1227559903292555357">              <img class="item" src="images/discord.png"></a></span>
