--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                                          <p align="middle" style="font-size: 35px; font-family: Arial; margin: 30px; color: white; ">NEGRONN</p>
 
                     <div id="logos" class="logos">
+                        <span class="span"><a href="https://asgardia.space/en/social/users/1166609">                   <img class="item" src="images/asgardia.png"></a></span>
                         <span class="span"><a href="https://www.twitch.tv/negronnshow/">                                  <img class="item" src="images/twitch.png"></a></span>
                         <span class="span"><a href="https://steamcommunity.com/chat/invite/QuFgrbKA">                         <img class="item" src="images/steam.png"></a></span>
                         <span class="span"><a href="https://www.gog.com/u/NEGRONN">                                 <img class="item" src="images/gog.png"></a></span>
@@ -35,7 +36,6 @@
                         <span class="span"><a href="https://www.guilded.gg/profile/nm6j5xzm">              <img class="item" src="images/guilded.png"></a></span>
                         <span class="span"><a href="https://xdaforums.com/m/negron-show.8946969/">                <img class="item" src="images/xda.png"></a></span>
                         <span class="span"><a href="mailto:negronnshow@gmail.com">                                      <img class="item" src="images/Mail.png"></a></span>
-
                     </div>
 
                     <div class="avatar">
